--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -1,24 +1,37 @@
 % rebase('osnova.html')
 <section class="hero">
     <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
+        <div class="container has-text-centered">
+            <h1 class="title is-1">
                 Servis naprav
             </h1>
         </div>
     </div>
 </section>
 
+<div class="container">
+    <div class="buttons are-large">
+        <a href="/nova-oprema/" class="button is-primary">Dodaj novo opremo<a>
+        <a href="/opis-naprave/" class="button">Opis naprave</a>
+        <a href="/izpis/" class="button">Izpis</a>
+    </div>
 
-<div class="buttons">
-    <button class="button is-large">Nova Naprava</button>
-    <button class="button is-large">Preglej Napravo</button>
-    <button class="button is-large">Nova Naprava</button>
-    <button class="button is-large">Nova Naprava</button>
-</div>
-<div class="buttons">
-    <button class="button is-large">Nova Naprava</button>
-    <button class="button is-large">Nova Naprava</button>
-    <button class="button is-large">Nova Naprava</button>
-    <button class="button is-large">Nova Naprava</button>
+    <div class="buttons are-large">
+        <button class="button is-primary">Aktiviraj postopek</button>
+        <button class="button">Prevzem</button>
+        <button class="button">Vrnjeno</button>
+        <button class="button">Zaključi</button>
+    </div>
+
+    <div class="buttons are-large">
+        <button class="button is-primary">Aktivirani aparati</button>
+        <button class="button">Na servisu</button>
+        <button class="button">Popravljeni nedokončani</button>
+    </div>
+
+    <div class="buttons are-large">
+        <button class="button is-primary">Odtujen</button>
+        <button class="button">Postopek odpisa</button>
+        <button class="button">Odpis</button>
+    </div>
 </div>
