DOdan izgled za opis naprave

--- a/views/nova_oprema.html
+++ b/views/nova_oprema.html
@@ -15,8 +15,8 @@
     <div class="field-label is-normal">
         <label class="label">Inventarna št</label>
     </div>
-    <div class="field-body">
-        <input class="input" type="text">
+    <div class="field-body has-addons">
+        <p class="control"><input class="input" type="text" value=""></p>
     </div>
 </div>
 
@@ -139,7 +139,7 @@
                 <input class="input" type="text">
             </div>
 
-            <div class="field-label">
+            <div class="field-label is-normal">
                 <label class="label">Lokacija</label>
             </div>
             <div class="field-body">
