--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -13,7 +13,7 @@
     <div class="buttons are-large">
         <a href="/nova-oprema/" class="button is-primary">Dodaj novo opremo<a>
         <a href="/opis-naprave/" class="button">Opis naprave</a>
-        <a href="/izpis/" class="button">Izpis</a>
+        <a href="/izpisi/" class="button">Izpis</a>
     </div>
 
     <div class="buttons are-large">
