--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="buttons are-large">
-        <button class="button is-primary">Aktiviraj postopek</button>
+        <a href="/aktivacija-postopka/" class="button is-primary">Aktiviraj postopek</a>
         <button class="button">Prevzem</button>
         <button class="button">Vrnjeno</button>
         <button class="button">Zaključi</button>
