--- a/views/izpis.html
+++ b/views/izpis.html
@@ -22,6 +22,7 @@
         <div class="column is-2">
             <div class="select">
                 <select name="tip_izpisa">
+                    <option value='' selected disabled hidden></option>
                     <option value='lokacije'>Po lokaciji</option>
                     <option value='serviserji'>Po serviserjih</option>
                     <option value='RLP'>Naslednji RLP</option>
