--- a/views/prevzem.html
+++ b/views/prevzem.html
@@ -51,7 +51,7 @@
 
     <div class="field is-horizontal">
         <div class="field-label is-normal">
-            <label class="label">Datum aktivacije</label>
+            <label class="label">Datum prevzema</label>
         </div>
         <div class="field-body">
             <div class="select">
@@ -77,50 +77,10 @@
             </div>
         </div>
     </div>
-    <div class="field is-horizontal">
-        <div class="field-label">
-        <label class="label"></label>
-        </div>
-        <div class="field-body">
-        <div class="field is-narrow">
-            <div class="control">
-            <label class="radio">
-                <input type="radio" name="member">
-                RLP
-            </label>
-            <label class="radio">
-                <input type="radio" name="member">
-                Popravilo
-            </label>
-            <label class="radio">
-                <input type="radio" name="member">
-                RLP in popravilo
-            </label>
-            </div>
-        </div>
-        </div>
-    </div>
-
-    <div class="field is-horizontal">
-        <div class="field-label is-normal">
-            <label class="label">Št naročila</label>
-        </div>
-        <div class="field-body has-addons">
-            <p class="control"><input class="input" type="text" name="inventarna"></p>
-        </div>
-    </div>
-    <div class="field is-horizontal">
-        <div class="field-label is-normal">
-            <label class="label">Opis napake</label>
-        </div>
-        <div class="field-body">
-            <input class="input" type="text" name="inventarna">
-        </div>
-    </div>
 </div>
 <div class="columns">
-    <div class="column is-offset-6">
-        <input class="button is-primary is-large" type="submit" value="Aktiviraj postopek"></input>
+    <div class="column is-offset-4">
+        <input class="button is-primary is-large" type="submit" value="Potrdi spremembe"></input>
     </div>
 </div>
 
