Dodani izgledi za posamezne izpise

--- a/views/izpis.html
+++ b/views/izpis.html
@@ -40,7 +40,7 @@
 </form>
 
 % if tip_izpisa:
-<table class="table is-fullwidth">
+<table class="table is-striped is-fullwidth is-hoverable is-bordered">
     <thead>
       <tr>
         <th><abbr title="Position">Naziv</abbr></th>
