--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -24,9 +24,9 @@
     </div>
 
     <div class="buttons are-large">
-        <button class="button">Aktivirani aparati</button>
-        <button class="button">Na servisu</button>
-        <button class="button">Popravljeni nedokončani</button>
+        <a href="/aktivirane-naprave/" class="button is-primary">Aktivirane naprave</a>
+        <a href="/na-servisu/" class="button is-primary">Na servisu</a>
+        <a href="/nedokoncani/" class="button is-primary">Popravljeni nedokončani</a>
     </div>
 
     <div class="buttons are-large">
