Dodan izgled za odpis in odtujitev

--- a/views/odtujen.html
+++ b/views/odtujen.html
@@ -13,7 +13,7 @@
 
 <form method="POST">
 
-    <div class="columns is-gapless is-vcentered">
+    <div class="columns is-gapless">
         <div class="column is-3">
             <div class="field-label is-normal">
                 <label class="label">Inventarna št</label>
@@ -22,6 +22,22 @@
         <div class="column is-2">
             <div class="field-body has-addons">
                 <p class="control"><input class="input" type="text" name="inventarna"></p>
+            </div>
+            <div class="field is-horizontal">
+                <div class="field-body">
+                <div class="field is-narrow">
+                    <div class="control">
+                    <label class="radio">
+                        <input type="radio" name="member">
+                        Odtujitev
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="member">
+                        Vrnitev
+                    </label>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
         <div class="column">
@@ -51,7 +67,7 @@
 
     <div class="field is-horizontal">
         <div class="field-label is-normal">
-            <label class="label">Datum vrnitve</label>
+            <label class="label">Datum odtujitve</label>
         </div>
         <div class="field-body">
             <div class="select">
@@ -77,26 +93,9 @@
             </div>
         </div>
     </div>
-    <div class="field is-horizontal">
-        <div class="field-label is-normal">
-            <label class="label">Opombe</label>
-        </div>
-        <div class="field-body">
-            <input class="input" type="text" name="inventarna">
-        </div>
-    </div>
-</div>
-<div class="columns is-vcentered">
-    <div class="column has-text-right">
-        <label class="checkbox">
-            <input type="checkbox">
-            Zaključi takoj
-          </label>
-    </div>
-    <div class="column">
+<div class="columns">
+    <div class="column is-offset-6">
         <input class="button is-primary is-large" type="submit" value="Potrdi spremembe"></input>
     </div>
 </div>
-
-
 %end
