--- a/views/zacetna_stran.html
+++ b/views/zacetna_stran.html
@@ -30,9 +30,9 @@
     </div>
 
     <div class="buttons are-large">
-        <button class="button">Odtujen</button>
+        <a href="/odtujen/" class="button is-primary">Odtujen</a>
         <button class="button">Postopek odpisa</button>
-        <button class="button">Odpis</button>
+        <a href="/odpis/" class="button is-primary">Odpis</a>
     </div>
 </div>
 
