--- a/views/odpis.html
+++ b/views/odpis.html
@@ -51,7 +51,7 @@
 
     <div class="field is-horizontal">
         <div class="field-label is-normal">
-            <label class="label">Datum vrnitve</label>
+            <label class="label">Datum odpisa</label>
         </div>
         <div class="field-body">
             <div class="select">
@@ -77,23 +77,9 @@
             </div>
         </div>
     </div>
-    <div class="field is-horizontal">
-        <div class="field-label is-normal">
-            <label class="label">Opombe</label>
-        </div>
-        <div class="field-body">
-            <input class="input" type="text" name="inventarna">
-        </div>
-    </div>
 </div>
-<div class="columns is-vcentered">
-    <div class="column has-text-right">
-        <label class="checkbox">
-            <input type="checkbox">
-            Zaključi takoj
-          </label>
-    </div>
-    <div class="column">
+<div class="columns">
+    <div class="column is-offset-4">
         <input class="button is-primary is-large" type="submit" value="Potrdi spremembe"></input>
     </div>
 </div>
