--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -38,7 +38,7 @@
     </div>
     <div class="field-body">
         <div class="field">
-            <label class="label">{{inventarna}}</label>
+            <label class="label">{{naprava.naziv}}</label>
         </div>
     </div>
 </div>
@@ -61,22 +61,22 @@
     <div class="column is-one-fifth">
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.tip}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.serijska}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.stroskovno}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.dobavitelj}}</label>
             </div>
         </div>
     </div>
@@ -97,22 +97,22 @@
     <div class="column is-one-fifth">
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.garancija}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.lokacija}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.proizvajalec}}</label>
             </div>
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.skrbnik}}</label>
             </div>
         </div>
     </div>
@@ -153,7 +153,7 @@
     <div class="column">
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.dobava}}</label>
             </div>
         </div>
     </div>
@@ -165,7 +165,7 @@
     <div class="column">
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.serviser}}</label>
             </div>
         </div>
     </div>
@@ -177,7 +177,7 @@
     <div class="column">
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{naprava.rlp}}</label>
             </div>
         </div>
     </div>
