Narejena delujoca datepicker script in koncan opis

--- a/views/aktivacija_postopka.html
+++ b/views/aktivacija_postopka.html
@@ -4,7 +4,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                Servis naprav
+                Aktivacija postopka
             </h1>
         </div>
     </div>
@@ -37,7 +37,7 @@
             <label class="label">Naziv</label>
         </div>
         <div class="field-body">
-            <label class="label">{{inventarna}}</label>
+            <label class="label">{{naziv}}</label>
         </div>
     </div>
     <div class="field is-horizontal">
@@ -45,7 +45,7 @@
             <label class="label">Lokacija</label>
         </div>
         <div class="field-body">
-            <label class="label">{{inventarna}}</label>
+            <label class="label">{{lokacija}}</label>
         </div>
     </div>
 
@@ -55,24 +55,15 @@
         </div>
         <div class="field-body">
             <div class="select">
-                <select>
-                    <option>01</option>
-                    <option>02</option>
-                    <option>03</option>
+                <select id="select_dan">
                 </select>
             </div>
             <div class="select">
-                <select>
-                    <option>01</option>
-                    <option>02</option>
-                    <option>03</option>
+                <select id="select_mesec">
                 </select>
             </div>
             <div class="select">
-                <select>
-                    <option>2016</option>
-                    <option>2017</option>
-                    <option>2018</option>
+                <select id="select_leto">
                 </select>
             </div>
         </div>
@@ -124,5 +115,59 @@
     </div>
 </div>
 
+<script>
+    function posodobi_dneve(selectElement) {
+        var i, L = selectElement.options.length - 1;
+        for(i = L; i >= 0; i--) 
+            selectElement.remove(i);
+    
+        mesec = document.getElementById("select_mesec").value;
+        leto = document.getElementById("select_leto").value;
 
+        if (mesec == 2)
+            if (((leto % 4 == 0) && (leto % 100 != 0)) || (leto % 400 == 0))
+                st_dni = 29;
+            else
+                st_dni = 28;
+        else
+            if (mesec % 2 == 0)
+                st_dni = 30;
+            else
+                st_dni = 31;
+    
+        for (var i = 1; i <= st_dni; i++)
+            selectElement.options[selectElement.options.length] = new Option(i, i);
+    }
+
+
+    n = new Date();
+    leto = n.getFullYear();
+    mesec = n.getMonth() + 1;
+    dan = n.getDate();
+
+    select_dan = document.getElementById("select_dan");
+    select_mesec = document.getElementById("select_mesec");
+    select_leto = document.getElementById("select_leto");
+    
+    for (var i = 1; i <= 12; i++)
+        select_mesec.options[select_mesec.options.length] = new Option(i, i);
+
+    for (var i = 1980; i <= leto; i++)
+        select_leto.options[select_leto.options.length] = new Option(i, i);
+
+    
+    select_mesec.selectedIndex = mesec - 1;
+    select_leto.value = leto;
+    posodobi_dneve(select_dan);
+    select_dan.selectedIndex = dan - 1;
+
+    select_mesec.onchange = function(){
+        posodobi_dneve(select_dan)
+    }
+    
+    select_leto.onchange = function(){
+        posodobi_dneve(select_dan)
+    }
+
+</script>
 %end
