--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -112,7 +112,7 @@
         </div>
         <div class="field">
             <div class="field">
-                <label class="label">{{inventarna}}</label>
+                <label class="label">{{skrbnik}}</label>
             </div>
         </div>
     </div>
