--- a/views/aktivacija_postopka.html
+++ b/views/aktivacija_postopka.html
@@ -21,16 +21,16 @@
         </div>
         <div class="column is-2">
             <div class="field-body has-addons">
-                <p class="control"><input class="input" type="text" name="inventarna"></p>
+                <p class="control"><input class="input" type="text" name="inventarna" value="{{inventarna}}"></p>
             </div>
         </div>
         <div class="column">
-            <input class="button is-primary is-large" type="submit" value="Poizvej"></input>
+            <input class="button is-primary is-large" type="submit" value="Poizvej" name="iskanje_naprave"></input>
         </div>
     </div>
-</form>
 
 %if inventarna:
+<form method="POST">
 <div class="column is-8">
     <div class="field is-horizontal">
         <div class="field-label">
@@ -55,15 +55,15 @@
         </div>
         <div class="field-body">
             <div class="select">
-                <select id="select_dan">
+                <select id="select_dan" name="dan">
                 </select>
             </div>
             <div class="select">
-                <select id="select_mesec">
+                <select id="select_mesec" name="mesec">
                 </select>
             </div>
             <div class="select">
-                <select id="select_leto">
+                <select id="select_leto" name="leto">
                 </select>
             </div>
         </div>
@@ -73,22 +73,22 @@
         <label class="label"></label>
         </div>
         <div class="field-body">
-        <div class="field is-narrow">
-            <div class="control">
-            <label class="radio">
-                <input type="radio" name="member">
-                RLP
-            </label>
-            <label class="radio">
-                <input type="radio" name="member">
-                Popravilo
-            </label>
-            <label class="radio">
-                <input type="radio" name="member">
-                RLP in popravilo
-            </label>
+            <div class="field is-narrow">
+                <div class="control">
+                    <label class="radio">
+                        <input type="radio" name="tip" value="RLP">
+                        RLP
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="tip" value="Popravilo">
+                        Popravilo
+                    </label>
+                    <label class="radio">
+                        <input type="radio" name="tip" value="RLP in popravilo">
+                        RLP in popravilo
+                    </label>
+                </div>
             </div>
-        </div>
         </div>
     </div>
 
@@ -97,7 +97,7 @@
             <label class="label">Št naročila</label>
         </div>
         <div class="field-body has-addons">
-            <p class="control"><input class="input" type="text" name="inventarna"></p>
+            <p class="control"><input class="input" type="text" name="st_narocila"></p>
         </div>
     </div>
     <div class="field is-horizontal">
@@ -105,15 +105,16 @@
             <label class="label">Opis napake</label>
         </div>
         <div class="field-body">
-            <input class="input" type="text" name="inventarna">
+            <input class="input" type="text" name="opis_napake">
         </div>
     </div>
 </div>
 <div class="columns">
     <div class="column is-offset-6">
-        <input class="button is-primary is-large" type="submit" value="Aktiviraj postopek"></input>
+        <input class="button is-primary is-large" type="submit" value="Aktiviraj postopek" name="potrditev_sprememb"></input>
     </div>
 </div>
+
 
 <script>
     function posodobi_dneve(selectElement) {
@@ -130,7 +131,7 @@
             else
                 st_dni = 28;
         else
-            if (mesec % 2 == 0)
+            if (["2", "4", "6", "9", "11"].includes(mesec))
                 st_dni = 30;
             else
                 st_dni = 31;
@@ -138,7 +139,6 @@
         for (var i = 1; i <= st_dni; i++)
             selectElement.options[selectElement.options.length] = new Option(i, i);
     }
-
 
     n = new Date();
     leto = n.getFullYear();
@@ -155,7 +155,6 @@
     for (var i = 1980; i <= leto; i++)
         select_leto.options[select_leto.options.length] = new Option(i, i);
 
-    
     select_mesec.selectedIndex = mesec - 1;
     select_leto.value = leto;
     posodobi_dneve(select_dan);
@@ -168,6 +167,9 @@
     select_leto.onchange = function(){
         posodobi_dneve(select_dan)
     }
-
 </script>
 %end
+
+
+
+</form>
