--- a/views/opis_naprave.html
+++ b/views/opis_naprave.html
@@ -4,7 +4,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                Servis naprav
+                Opis naprave
             </h1>
         </div>
     </div>
@@ -206,11 +206,11 @@
         <tbody>
             % for popravilo in popravila:
             <tr>
-                <td>{{popravilo.aktivacija}}</td>
-                <td>{{popravilo.tip}}</td>
-                <td>{{popravilo.sprejem}}</td>
-                <td>{{popravilo.vrnitev}}</td>
-                <td>{{popravilo.opis}}</td>
+                <td>{{popravilo['aktivacija']}}</td>
+                <td>{{popravilo['tip']}}</td>
+                <td>{{popravilo['sprejem']}}</td>
+                <td>{{popravilo['vrnitev']}}</td>
+                <td>{{popravilo['opis']}}</td>
             </tr>
             % end
         </tbody>
