--- a/views/prevzem.html
+++ b/views/prevzem.html
@@ -15,19 +15,21 @@
 <div class="modal is-active" id='pop_up'>
     <div class="modal-background"></div>
     <div class="modal-content">
-        <div class="box">
-            <div class="content">
-                <p>
-                <strong>Ups!</strong>
-                <br>
-                Naprava nima aktiviranega postopka.
-                </p>
-            </div>
-            <div>
-                <button class="button is-success" id='zapri'>Ok</button>
-            </div>
+        <div class="column is-7 is-offset-3">
+            <div class="box">
+                <div class="content">
+                    <p>
+                    <strong>Ups!</strong>
+                    <br>
+                    Naprava nima aktiviranega postopka.
+                    </p>
+                </div>
+                <div>
+                    <button class="button is-success" id='zapri'>Ok</button>
+                </div>
             </div>
         </div>
+    </div>
     </div>
 </div>
 <script>
@@ -98,10 +100,8 @@
             </div>
         </div>
     </div>
-    <div class="columns">
-        <div class="column is-offset-4">
-            <input class="button is-primary is-large" type="submit" value="Potrdi spremembe" name="potrditev_sprememb"></input>
-        </div>
+    <div class="column is-offset-4">
+        <input class="button is-primary is-large" type="submit" value="Potrdi spremembe" name="potrditev_sprememb"></input>
     </div>
 
     <script>
