--- a/views/vrnitev.html
+++ b/views/vrnitev.html
@@ -21,7 +21,7 @@
                     <p>
                     <strong>Ups!</strong>
                     <br>
-                    Naprava se ni bila prevzeta
+                    Naprava še ni bila prevzeta.
                     </p>
                 </div>
                 <div>
@@ -177,7 +177,6 @@
     </script>
     %end
 
-</form>
-
 %end
+</form>
 
