--- a/views/zakljuci.html
+++ b/views/zakljuci.html
@@ -4,12 +4,42 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                Servis naprav
+                Zaključi
             </h1>
         </div>
     </div>
 </section>
 <a href="/" class="button is-primary is-large">Nazaj</a>
+
+%if napaka:
+<div class="modal is-active" id='pop_up'>
+    <div class="modal-background"></div>
+    <div class="modal-content">
+        <div class="column is-7 is-offset-3">
+            <div class="box">
+                <div class="content">
+                    <p>
+                    <strong>Ups!</strong>
+                    <br>
+                    Naprava še ni vrnjena.
+                    </p>
+                </div>
+                <div>
+                    <button class="button is-success" id='zapri'>Ok</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+<script>
+    var pop_up = document.querySelector('#pop_up')
+    var zapri = document.querySelector('#zapri')
+    zapri.addEventListener('click', function(){
+        pop_up.classList.remove('is-active')
+    });
+</script>
+%end
 
 <form method="POST">
 
@@ -21,39 +51,43 @@
         </div>
         <div class="column is-2">
             <div class="field-body has-addons">
-                <p class="control"><input class="input" type="text" name="inventarna"></p>
+                <p class="control"><input class="input" type="text" name="inventarna" value="{{inventarna}}"></p>
             </div>
         </div>
         <div class="column">
-            <input class="button is-primary is-large" type="submit" value="Poizvej"></input>
+            <input class="button is-primary is-large" type="submit" value="Poizvej" name="iskanje_naprave"></input>
         </div>
     </div>
-</form>
 
-%if inventarna:
-<div class="column is-8">
-    <div class="field is-horizontal">
-        <div class="field-label">
-            <label class="label">Naziv</label>
-        </div>
-        <div class="field-body">
-            <label class="label">{{inventarna}}</label>
-        </div>
-    </div>
-    <div class="field is-horizontal">
-        <div class="field-label">
-            <label class="label">Lokacija</label>
-        </div>
-        <div class="field-body">
-            <label class="label">{{inventarna}}</label>
-        </div>
-    </div>
-</div>
-<div class="columns">
-    <div class="column is-offset-3">
-        <input class="button is-primary is-large" type="submit" value="Zaključi"></input>
-    </div>
-</div>
 
+    %if inventarna:
+    <div class="column is-8">
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">Naziv</label>
+            </div>
+            <div class="field-body">
+                <label class="label">{{naziv}}</label>
+            </div>
+        </div>
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <label class="label">Lokacija</label>
+            </div>
+            <div class="field-body">
+                <label class="label">{{lokacija}}</label>
+            </div>
+        </div>
+    </div>
+
+    %if not napaka:
+    <div class="columns">
+        <div class="column is-offset-3">
+            <input class="button is-primary is-large" type="submit" value="Zaključi" name="potrditev_sprememb"></input>
+        </div>
+    </div>
+
+    %end
 
 %end
+</form>
